Closed Bug 1761832 Opened 4 years ago Closed 4 years ago

Protect GLLibraryEGL singleton against race conditions

Categories

(Core :: Graphics, defect, P3)

defect

Tracking

()

RESOLVED FIXED
100 Branch
Tracking Status
firefox100 --- fixed

People

(Reporter: aosmond, Assigned: aosmond)

Details

Attachments

(1 file)

No description provided.
Severity: -- → S3
Priority: -- → P3
Assignee: nobody → aosmond
Pushed by aosmond@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/7403fb5ad11f Protect GLLibraryEGL singleton against race conditions. r=jgilbert
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 100 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: