Bug 1761832 - Protect GLLibraryEGL singleton against race conditions. r=jgilbert

Differential Revision: https://phabricator.services.mozilla.com/D142257